fix z-index problem on wittliff home and special templates when herobanner/heroslider is not created yet #8031

--- a/resources/gato-template-wittliff/css/_header.scss
+++ b/resources/gato-template-wittliff/css/_header.scss
@@ -22,7 +22,7 @@ strong {
 	font-weight: 500;
 }
 
-.gato-heroslider, .gato-herobanner, .page_content, .page-footer {
+.gato-heroslider, .gato-herobanner, .page_content, .page-footer, .addHeroSlider, .addHeroBanner {
   position: relative;
   z-index: 1;
 }
